Fixed text wrapping issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,7 +6,7 @@
 
 @layer base {
     html {
-        font-family: Inter, system-ui, sans-serif;
+        font-family: system-ui, sans-serif;
     }
 }
 
